--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: gradlew 실행 권한 부여
+        run: chmod +x ./gradlew
+
       # 3. Gradle로 프로젝트 빌드
       - name: Build project
         run: ./gradlew clean build
