--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,5 +48,4 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            pkill -f 'java -jar' || true
-            nohup java -jar /home/ubuntu/app/*.jar > /home/ubuntu/app/app.log 2>&1 & disown
+            bash -c "pkill -f 'java -jar' || true && nohup java -jar /home/ubuntu/app/*.jar > /home/ubuntu/app/app.log 2>&1 & disown"
