--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,4 +48,31 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            bash -c "pkill -f 'java -jar' || true && nohup java -jar /home/ubuntu/app/*.jar > /home/ubuntu/app/app.log 2>&1 & disown"
+            bash -c '
+              echo "[1] 기존 애플리케이션 종료 시도"
+              pkill -f "java -jar" || true
+
+              echo "[2] JAR 파일 선택"
+              JAR=$(ls /home/ubuntu/app/*.jar | head -n 1)
+              if [ ! -f "$JAR" ]; then
+                echo "❌ JAR 파일이 존재하지 않습니다: $JAR"
+                exit 1
+              fi
+
+              echo "[3] JAR 실행"
+              nohup java -jar "$JAR" > /home/ubuntu/app/app.log 2>&1 & disown
+
+              echo "[4] 앱 기동 대기..."
+              sleep 10
+
+              echo "[5] 애플리케이션 상태 확인"
+              STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/)
+              if [ "$STATUS" = "200" ] || [ "$STATUS" = "302" ] || [ "$STATUS" = "401" ]; then
+                echo "✅ 애플리케이션이 정상적으로 실행되었습니다. 응답 코드: $STATUS"
+                exit 0
+              else
+                echo "❌ 애플리케이션 응답이 없습니다. 응답 코드: $STATUS"
+                tail -n 50 /home/ubuntu/app/app.log || true
+                exit 1
+              fi
+            '
