--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,16 +50,10 @@ jobs:
           script: |
             bash -c '
               echo "[1] 기존 애플리케이션 종료 시도"
-              PID=$(pgrep -f "java -jar" || true)
-              if [ -n "$PID" ]; then
-                echo "→ 종료할 프로세스 ID: $PID"
-                kill -9 "$PID"
-              else
-                echo "→ 종료할 프로세스가 없습니다."
-              fi
+              pgrep -f "java -jar" | xargs -r kill -9 || echo "→ 종료할 프로세스 없음"
 
               echo "[2] JAR 파일 선택"
-              JAR=$(ls /home/ubuntu/app/*.jar | head -n 1)
+              JAR=$(ls /home/ubuntu/app/*.jar 2>/dev/null | head -n 1)
               echo "→ 선택된 JAR: $JAR"
               if [ ! -f "$JAR" ]; then
                 echo "❌ JAR 파일이 존재하지 않습니다: $JAR"
