--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,14 @@
 name: Deploy to EC2
 
 on:
-  push:
-    branches:
-      - main    # main 브랜치에 push 될 때마다 실행
+  workflow_run:
+    workflows: ["CI - Spring Boot"]
+    types:
+      - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest   # GitHub에서 제공하는 우분투 가상머신에서 실행
 
     steps:
