--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,9 @@ jobs:                            # 여러 job을 동시에 실행 가능
 
       - name: 🏗️ 빌드 실행
         run: ./gradlew build        # 애플리케이션 빌드 (jar 생성)
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: spring-boot-app
+          path: build/libs/*.jar
