퍼미션 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
     types:
       - completed
 
+permissions:   # ✅ 꼭 있어야 함!
+  actions: read
+  contents: read
+
 jobs:
   deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -16,6 +20,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: spring-boot-app
+          path: ./spring-boot-app
 
       - name: Copy JAR to EC2
         uses: appleboy/scp-action@master
