--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,15 +40,23 @@ jobs:
           source: "build/libs/*.jar"
           target: "/home/ubuntu/app"
 
-      - name: 🚀 앱 재시작 및 헬스체크
+      - name: Start new app and health check
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
+            bash -c '
+            set +e
+
             echo "[1] 기존 애플리케이션 종료 시도"
-            pkill -f "java -jar" || echo "→ 종료할 프로세스 없음"
+            pkill -f "java -jar"
+            if [ $? -eq 0 ]; then
+              echo "→ 프로세스 종료 완료"
+            else
+              echo "→ 종료할 프로세스 없음"
+            fi
 
             echo "[2] JAR 파일 선택"
             JAR=$(ls /home/ubuntu/app/*.jar | head -n 1)
@@ -58,7 +66,7 @@ jobs:
             fi
 
             echo "[3] 애플리케이션 실행"
-            nohup java -jar "$JAR" > /home/ubuntu/app/app.log 2>&1 & disown
+            nohup java -jar "$JAR" > /home/ubuntu/app/app.log 2>&1 &
 
             echo "[4] 기동 대기"
             sleep 10
@@ -69,8 +77,11 @@ jobs:
 
             if [[ "$STATUS" == "200" || "$STATUS" == "302" || "$STATUS" == "401" ]]; then
               echo "✅ 애플리케이션이 정상적으로 실행되었습니다."
+              exit 0
             else
               echo "❌ 앱 응답 없음, 로그 출력:"
               tail -n 50 /home/ubuntu/app/app.log || echo "(로그 없음)"
               exit 1
             fi
+            '
+      
