--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,16 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            echo "[1] 기존 애플리케이션 종료 시도"
-            pkill -f "java -jar" && echo "→ 프로세스 종료 완료" || echo "→ 종료할 프로세스 없음"
+            bash -c '
+              echo "[1] 기존 애플리케이션 종료 시도"
+              PID=$(pgrep -f "java -jar")
+              if [ -n "$PID" ]; then
+              kill "$PID"
+              echo "→ 프로세스 종료 완료 (PID: $PID)"
+              else
+              echo "→ 종료할 프로세스 없음"
+              fi
+            '
 
       - name: Start new app and health check
         uses: appleboy/ssh-action@master
@@ -59,32 +67,31 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             bash -c '
-            set +e
+              echo "[2] JAR 파일 선택"
+              JAR=$(ls /home/ubuntu/app/build/libs/*.jar | grep -v plain | head -n 1)
+              if [ ! -f "$JAR" ]; then
+                echo "❌ JAR 파일이 없습니다: $JAR"
+                exit 1
+              fi
+              echo "→ 선택된 JAR: $JAR"
 
-            echo "[2] JAR 파일 선택"
-            JAR=$(ls /home/ubuntu/app/*.jar | head -n 1)
-            if [ ! -f "$JAR" ]; then
-              echo "❌ JAR 파일이 없습니다: $JAR"
-              exit 1
-            fi
+              echo "[3] 애플리케이션 실행"
+              nohup java -jar "$JAR" > /home/ubuntu/app/app.log 2>&1 & disown
 
-            echo "[3] 애플리케이션 실행"
-            nohup java -jar "$JAR" > /home/ubuntu/app/app.log 2>&1 &
+              echo "[4] 애플리케이션 상태 확인 중..."
+              for i in {1..10}; do
+                STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/)
+                if [[ "$STATUS" == "200" || "$STATUS" == "302" || "$STATUS" == "401" ]]; then
+                  echo "✅ 애플리케이션이 정상적으로 실행되었습니다. (응답 코드: $STATUS)"
+                  exit 0
+                fi
+                echo "⏳ 응답 대기 중... ($i/10)"
+                sleep 1
+              done
 
-            echo "[4] 기동 대기"
-            sleep 10
-
-            echo "[5] 상태 확인"
-            STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/)
-            echo "→ 응답 코드: $STATUS"
-
-            if [[ "$STATUS" == "200" || "$STATUS" == "302" || "$STATUS" == "401" ]]; then
-              echo "✅ 애플리케이션이 정상적으로 실행되었습니다."
-              exit 0
-            else
-              echo "❌ 앱 응답 없음, 로그 출력:"
+              echo "❌ 앱 응답 없음. 로그 출력:"
               tail -n 50 /home/ubuntu/app/app.log || echo "(로그 없음)"
               exit 1
-            fi
             '
+          
       
